Fix: remove css bug that meant popular profiles spill off screen on small screens.£

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,7 +15,7 @@ html,body
     padding-top: 60px;
     font-family: 'Montserrat', sans-serif;
     color: #2D3142;
-    width: 100vw;
+    width: 100%
 }
 
 i {
